# workshop-3

./: pyproject.toml
backend/: start.py
backend/aws/: client.py
backend/contracts/: schema.py
backend/datasource/: api.py
backend/fakeapi/: products.csv  start.py
