[tool.poetry]
name = "workshop-03"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
faker = "^33.1.0"
pandas = "^2.2.3"
uvicorn = "^0.34.0"
pydantic = "^2.10.4"
requests = "^2.32.3"
pyarrow = "^18.1.0"
boto3 = "^1.35.88"
pyathena = "^3.12.0"
python-dotenv = "^1.0.1"
schedule = "^1.2.2"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
